--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,50 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Next.js build output
+.next/
+out/
 
-# testing
-/coverage
+# Production
+build/
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Dependency directories
+.pnp/
+.pnp.js
 
-# vercel
-.vercel
+# Testing
+coverage/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# VSCode settings
+.vscode/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Optional: Ignore local Prisma migrations and db if you want
+prisma/dev.db
+prisma/migrations/
+
+# Optional: Ignore Turbopack / turbo cache if you're using it
+.turbo/
+
+# Optional: Ignore next-auth debug files
+.nextauth/
+
+# Optional: Ignore output from vercel build
+.vercel/output/
