--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
-DATABASE_URL="mysql://pos:pos@localhost/pos"
+# DATABASE_URL="mysql://pos:pos@localhost/pos"
+MONGODB_URI=mongodb://localhost:27017/pos
 JWT_SECRET="9+xiwSSxdCm+KBttrfeGlbnizZTWYPJswDhsj/d/+wY="
 NOUN_PROJECT_KEY="b548a6e5767c4f4db29e50dab0179344"
 NOUN_PROJECT_SECRET="4c61ad596921447f821093f99dceeb3f"
