--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
+    "react-image-crop": "^11.0.10",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
