--- a/package.json
+++ b/package.json
@@ -46,14 +46,12 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.58.1",
     "react-image-crop": "^11.0.10",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
     "use-immer": "^0.11.0",
-    "zod": "^3.25.67",
-    "zustand": "^5.0.5"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
