--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
-    "@prisma/client": "^6.5.0",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -28,7 +27,6 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@stripe/terminal-js": "^0.24.0",
-    "@tanstack/react-table": "^8.21.3",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -41,13 +39,14 @@
     "lucide-react": "^0.484.0",
     "mongoose": "^8.14.2",
     "mongoose-delete": "^1.0.2",
-    "next": "15.3",
+    "next": "^15.3.5",
     "next-themes": "^0.4.6",
     "oauth": "^0.10.2",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-image-crop": "^11.0.10",
+    "react-qrcode-logo": "^3.0.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.0.2",
