--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pos",
-  "version": "0.1.0",
+  "name": "cultcha",
+  "version": "1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -50,7 +49,6 @@
     "react-signature-canvas": "^1.1.0-alpha.2",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.0.2",
-    "tw-animate-css": "^1.2.4",
     "use-immer": "^0.11.0",
     "zod": "^3.25.67",
     "zustand": "^5.0.6"
