--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "react-image-crop": "^11.0.10",
     "react-qrcode-logo": "^3.0.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
+    "shadcn-ui": "^0.9.5",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.0.2",
+    "tw-animate-css": "^1.3.5",
     "use-immer": "^0.11.0",
     "zod": "^3.25.67",
     "zustand": "^5.0.6"
