--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.5",
-    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.6",
@@ -30,7 +30,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "jose": "^6.0.10",
@@ -38,25 +37,27 @@
     "lucide-react": "^0.484.0",
     "mongoose": "^8.14.2",
     "mongoose-delete": "^1.0.2",
-    "next": "^15.3.5",
+    "next": "^15.4.1",
     "next-themes": "^0.4.6",
     "oauth": "^0.10.2",
+    "pdfkit": "^0.17.1",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
-    "react-day-picker": "^9.7.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-image-crop": "^11.0.10",
     "react-qrcode-logo": "^3.0.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "shadcn-ui": "^0.9.5",
     "stripe": "^18.2.1",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.5",
     "use-immer": "^0.11.0",
     "zod": "^3.25.67",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.4",
-    "tailwindcss": "^4.1.4"
+    "@tailwindcss/postcss": "^4.1.11",
+    "tailwindcss": "^4.1.11"
   }
 }
