--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0",
     "react-image-crop": "^11.0.10",
     "react-qrcode-logo": "^3.0.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
@@ -58,6 +59,7 @@
     "zustand": "^5.0.6"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@tailwindcss/postcss": "^4.1.11",
     "tailwindcss": "^4.1.11"
   }
