--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongoose-delete": "^1.0.2",
     "next": "^15.4.1",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "oauth": "^0.10.2",
     "pdfkit": "^0.17.1",
     "qrcode": "^1.5.4",
