--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-qrcode-logo": "^3.0.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "shadcn-ui": "^0.9.5",
+    "sonner": "^2.0.6",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.5",
