Add animated highlight effect to Check In page titles
- Install animate-ui package for animation effects
- Create AnimatedTitle component with sliding highlight animation
- Create HighlightText component for inline text highlighting
- Apply animated highlight to 'Cultcha Check In' titles
- Use emerald gradient for main title, white gradient for overlay title
- Add smooth scale and skew transforms for eye-catching effect

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tiptap/extension-underline": "^3.0.9",
     "@tiptap/react": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
+    "animate-ui": "^0.0.4",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
