Fix organization data in public API routes and email receipts
- Add all org address fields to terms and instructions API routes
- Include org logo and address in email receipt template
- Update receipt styling to neutral gray header with org branding
- Fix API population queries to include all org fields
- Ensure consistent org data display across all public pages

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ yarn-error.log*
 
 # Testing
 coverage/
+test-results/
+playwright-report/
+playwright/.cache/
+.playwright/
 
 # VSCode settings
 .vscode/
