--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@jpisnice/shadcn-ui-mcp-server": "^1.0.3",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
@@ -34,10 +39,12 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@stripe/terminal-js": "^0.24.0",
     "@tiptap/extension-heading": "^3.0.9",
@@ -55,6 +62,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
+    "embla-carousel-react": "^8.6.0",
     "jose": "^6.0.10",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.484.0",
@@ -72,6 +80,7 @@
     "react-hook-form": "^7.62.0",
     "react-image-crop": "^11.0.10",
     "react-qrcode-logo": "^3.0.0",
+    "react-resizable-panels": "^3.0.5",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "shadcn-ui": "^0.9.5",
     "sonner": "^2.0.7",
@@ -79,6 +88,7 @@
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.5",
     "use-immer": "^0.11.0",
+    "vaul": "^1.1.2",
     "zod": "^3.25.76",
     "zustand": "^5.0.6"
   },
