fix: add STRIPE_SECRET_KEY to build environment

--- a/.github/workflows/deploy-to-eb.yml
+++ b/.github/workflows/deploy-to-eb.yml
@@ -31,6 +31,7 @@ jobs:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
           NEXT_PUBLIC_API_BASE_URL: ${{ secrets.NEXT_PUBLIC_API_BASE_URL }}
           NEXT_PUBLIC_DOMAIN: ${{ secrets.NEXT_PUBLIC_DOMAIN }}
+          STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
 
       - name: Generate deployment package
         run: |
