--- a/.github/workflows/deploy-to-eb.yml
+++ b/.github/workflows/deploy-to-eb.yml
@@ -55,3 +55,4 @@ jobs:
           region: ${{ secrets.AWS_REGION }}
           deployment_package: deploy.zip
           wait_for_environment_recovery: 120
+          wait_for_deployment: false
