fix: include .next build folder in deployment and add health check endpoint

--- a/.github/workflows/deploy-to-eb.yml
+++ b/.github/workflows/deploy-to-eb.yml
@@ -42,7 +42,10 @@ jobs:
             -x ".env.development" \
             -x "*.log" \
             -x ".DS_Store" \
-            -x "deploy.zip"
+            -x "deploy.zip" \
+            -x ".github/*" \
+            -x "scripts/*" \
+            -x "docs/*"
 
       - name: Deploy to Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v22
