--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start -p ${PORT:-3000}",
+    "start": "next start",
     "lint": "next lint",
     "test": "playwright test",
     "test:local-http": "playwright test --config=playwright.local-http.config.js --project=chromium --reporter=line",
