--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
     "sonner": "^2.0.7",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "@tailwindcss/postcss": "^4.1.11",
     "tw-animate-css": "^1.3.5",
     "use-immer": "^0.11.0",
     "vaul": "^1.1.2",
@@ -94,8 +96,6 @@
   },
   "devDependencies": {
     "@hookform/resolvers": "^5.2.1",
-    "@playwright/test": "^1.54.2",
-    "@tailwindcss/postcss": "^4.1.11",
-    "tailwindcss": "^4.1.11"
+    "@playwright/test": "^1.54.2"
   }
 }
