Debug environment variables in Amplify
- Update amplify.yml to use full app directory as artifact
- Add test-env endpoint to check environment variables
- Log env vars during build to debug issue

--- a/amplify.yml
+++ b/amplify.yml
@@ -8,9 +8,10 @@ applications:
         build:
           commands:
             - echo "Building Next.js application..."
+            - env | grep -E "MONGODB_URI|JWT_SECRET|NODE_ENV" || echo "No env vars found"
             - npm run build
       artifacts:
-        baseDirectory: .next
+        baseDirectory: .
         files:
           - '**/*'
       cache:
