--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^5.2.1",
     "@jpisnice/shadcn-ui-mcp-server": "^1.0.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -47,6 +48,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@stripe/terminal-js": "^0.24.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tiptap/extension-heading": "^3.0.9",
     "@tiptap/extension-paragraph": "^3.0.9",
     "@tiptap/extension-text-align": "^3.0.9",
@@ -75,7 +77,6 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
-    "@hookform/resolvers": "^5.2.1",
     "react-image-crop": "^11.0.10",
     "react-qrcode-logo": "^3.0.0",
     "react-resizable-panels": "^3.0.5",
@@ -85,7 +86,7 @@
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "@tailwindcss/postcss": "^4.1.11",
+    "tw-animate-css": "^1.3.8",
     "use-immer": "^0.11.0",
     "vaul": "^1.1.2",
     "zod": "^3.25.76",
